"report check in 2018-10-18"

--- a/stureports/think-java/AdamRashid.think-java_results.html
+++ b/stureports/think-java/AdamRashid.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-10-16
+Run date: 2018-10-18
 <br>Student User: AdamRashid
 <br>Project: think-java
 <br>
@@ -73,8 +73,8 @@ How many seconds? 13.00 sec = 0 hour, 0 min
 I'm thinking of a number between 1 and 100(Including Both)
 	Can you guess what it is? 
 	Type a number: You guessed: 13
-	The number I was thinking of is: 30
-	You were off by: 17
+	The number I was thinking of is: 84
+	You were off by: 71
 	
 <--
 	[OUTPUT OK]
@@ -254,13 +254,13 @@ I'm thinking of a number between 1 and 100(Including Both)
 -->
 
 	<br>Chapter7, Exercise4.indexOfMax()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.sieve("2")  </td><td align="left">[true, true]</td><td bgcolor="red"><b>[false, false] </b></td></tr>
-	<tr><td align="right" width="200">Exercise4.sieve("3")  </td><td align="left">[true, true, true]</td><td bgcolor="red"><b>[false, false, true] </b></td></tr>
-	<tr><td align="right" width="200">Exercise4.sieve("4")  </td><td align="left">[true, true, true, false]</td><td bgcolor="red"><b>[false, false, true, true] </b></td></tr>
-	<tr><td align="right" width="200">Exercise4.sieve("5")  </td><td align="left">[true, true, true, false, true]</td><td bgcolor="red"><b>[false, false, true, true, false] </b></td></tr>
-	<tr><td align="right" width="200">Exercise4.sieve("6")  </td><td align="left">[true, true, true, false, true, false]</td><td bgcolor="red"><b>[false, false, true, true, false, true] </b></td></tr>
-	<tr><td align="right" width="200">Exercise4.sieve("7")  </td><td align="left">[true, true, true, false, true, false, true]</td><td bgcolor="red"><b>[false, false, true, true, false, true, false] </b></td></tr>
-	<tr><td align="right" width="200">Exercise4.sieve("8")  </td><td align="left">[true, true, true, false, true, false, true, false]</td><td bgcolor="red"><b>[false, false, true, true, false, true, false, true] </b></td></tr>
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.sieve("2")  </td><td align="left">[false, false]</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.sieve("3")  </td><td align="left">[false, false, true]</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.sieve("4")  </td><td align="left">[false, false, true, true]</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.sieve("5")  </td><td align="left">[false, false, true, true, false]</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.sieve("6")  </td><td align="left">[false, false, true, true, false, true]</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.sieve("7")  </td><td align="left">[false, false, true, true, false, true, false]</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.sieve("8")  </td><td align="left">[false, false, true, true, false, true, false, true]</td><td width="50" bgcolor="green"> :) </td></tr>
 	</table><br>
 	[deductions=0.0]
 	
