"report check in 2018-10-21"

--- a/stureports/think-java/1amsmith1020.think-java_results.html
+++ b/stureports/think-java/1amsmith1020.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-10-19
+Run date: 2018-10-21
 <br>Student User: 1amsmith1020
 <br>Project: think-java
 <br>
@@ -70,7 +70,7 @@ Enter amount of seconds:
 	[SUCCESSFUL COMPILE] Exercise4.java
 [RUNNING] Exercise4
 -->
-8
+67
 	
 <--
 	[OUTPUT OK]
@@ -165,29 +165,221 @@ Ch6Ex5.java:57: error: cannot find symbol
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
 [COMPILING] Exercise3.java
-	[SUCCESSFUL COMPILE] Exercise3.java
-[TESTING WITH] TestCh7Ex3
-[COMPILING] TestCh7Ex3.java
-	[SUCCESSFUL COMPILE] TestCh7Ex3.java
-[RUNNING] TestCh7Ex3
--->
-
-	<br>Chapter7, Exercise3.indexOfMax()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.indexOfMax("[33, 12, 1]")  </td><td align="left">0</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.indexOfMax("[98, 12, 99]")  </td><td align="left">2</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.indexOfMax("[99, 100, 98, 5, 4, 3, 2, 1]")  </td><td align="left">1</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.indexOfMax("[100000, 100, 98, 5, 4, 3, 2, 1]")  </td><td align="left">0</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.indexOfMax("[0, 1, 2, 3, 4, 5]")  </td><td align="left">5</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.indexOfMax("[0, 4, 3, 5, 2, 7]")  </td><td align="left">5</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.indexOfMax("[-5, 0]")  </td><td align="left">1</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.indexOfMax("[0, -1]")  </td><td align="left">0</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	[deductions=0.0]
+	[ERROR] javac failed Exercise3.java Exercise3.java:4: error: illegal start of expression
+	<<<<<<< HEAD
+	^
+	Exercise3.java:4: error: illegal start of expression
+	<<<<<<< HEAD
+	  ^
+	Exercise3.java:4: error: illegal start of expression
+	<<<<<<< HEAD
+	    ^
+	Exercise3.java:5: error: > expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 9700, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,97 }; 
+			^
+	Exercise3.java:5: error: '.class' expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 9700, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,97 }; 
+			    ^
+	Exercise3.java:5: error: ';' expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 9700, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,97 }; 
+			     ^
+	Exercise3.java:5: error: illegal start of expression
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 9700, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,97 }; 
+			               ^
+	Exercise3.java:5: error: ';' expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 9700, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,97 }; 
+			                ^
+	Exercise3.java:5: error: not a statement
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 9700, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,97 }; 
+			                  ^
+	Exercise3.java:5: error: ';' expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 9700, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,97 }; 
+			                   ^
+	Exercise3.java:6: error: illegal start of type
+	=======
+	^
+	Exercise3.java:6: error: ';' expected
+	=======
+	  ^
+	Exercise3.java:6: error: illegal start of type
+	=======
+	    ^
+	Exercise3.java:6: error: <identifier> expected
+	=======
+	      ^
+	Exercise3.java:6: error: ';' expected
+	=======
+	       ^
+	Exercise3.java:7: error: illegal start of type
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			   ^
+	Exercise3.java:7: error: <identifier> expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			    ^
+	Exercise3.java:7: error: ';' expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			     ^
+	Exercise3.java:7: error: illegal start of type
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			               ^
+	Exercise3.java:7: error: <identifier> expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                ^
+	Exercise3.java:7: error: ';' expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                  ^
+	Exercise3.java:7: error: illegal start of type
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                   ^
+	Exercise3.java:7: error: <identifier> expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                    ^
+	Exercise3.java:7: error: <identifier> expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                       ^
+	Exercise3.java:7: error: illegal start of type
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                         ^
+	Exercise3.java:7: error: <identifier> expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                          ^
+	Exercise3.java:7: error: <identifier> expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                             ^
+	Exercise3.java:7: error: illegal start of type
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                                ^
+	Exercise3.java:7: error: <identifier> expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                                 ^
+	Exercise3.java:7: error: <identifier> expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                                    ^
+	Exercise3.java:7: error: illegal start of type
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                                      ^
+	Exercise3.java:7: error: <identifier> expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                                       ^
+	Exercise3.java:7: error: <identifier> expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                                           ^
+	Exercise3.java:7: error: illegal start of type
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                                             ^
+	Exercise3.java:7: error: <identifier> expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                                              ^
+	Exercise3.java:7: error: <identifier> expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                                                  ^
+	Exercise3.java:7: error: illegal start of type
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                                                    ^
+	Exercise3.java:7: error: <identifier> expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                                                     ^
+	Exercise3.java:7: error: <identifier> expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                                                          ^
+	Exercise3.java:7: error: illegal start of type
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                                                             ^
+	Exercise3.java:7: error: <identifier> expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                                                              ^
+	Exercise3.java:7: error: <identifier> expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                                                                 ^
+	Exercise3.java:7: error: illegal start of type
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                                                                   ^
+	Exercise3.java:7: error: <identifier> expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                                                                    ^
+	Exercise3.java:7: error: <identifier> expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                                                                       ^
+	Exercise3.java:7: error: illegal start of type
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                                                                         ^
+	Exercise3.java:7: error: <identifier> expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                                                                          ^
+	Exercise3.java:7: error: <identifier> expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                                                                                ^
+	Exercise3.java:7: error: illegal start of type
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                                                                                  ^
+	Exercise3.java:7: error: <identifier> expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                                                                                   ^
+	Exercise3.java:7: error: <identifier> expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                                                                                       ^
+	Exercise3.java:7: error: illegal start of type
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                                                                                          ^
+	Exercise3.java:7: error: <identifier> expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                                                                                           ^
+	Exercise3.java:7: error: ';' expected
+			int[] intArray = {1, 3, 2, 9, 17, 5, 4, 89, 7, 97, 8, 105, 18, 2, 3, 4, 5, 1003, 3, 18, 9 ,98 }; 
+			                                                                                             ^
+	Exercise3.java:8: error: illegal start of type
+	>>>>>>> ae81815f49d400f251fcf909e05d487371d3ea4e
+	^
+	Exercise3.java:8: error: ';' expected
+	>>>>>>> ae81815f49d400f251fcf909e05d487371d3ea4e
+	   ^
+	Exercise3.java:8: error: illegal start of type
+	>>>>>>> ae81815f49d400f251fcf909e05d487371d3ea4e
+	      ^
+	Exercise3.java:8: error: ';' expected
+	>>>>>>> ae81815f49d400f251fcf909e05d487371d3ea4e
+	                                                ^
+	Exercise3.java:9: error: <identifier> expected
+			System.out.println(indexOfMax(intArray));
+			                  ^
+	Exercise3.java:9: error: <identifier> expected
+			System.out.println(indexOfMax(intArray));
+			                             ^
+	Exercise3.java:9: error: ';' expected
+			System.out.println(indexOfMax(intArray));
+			                              ^
+	Exercise3.java:9: error: illegal start of type
+			System.out.println(indexOfMax(intArray));
+			                                      ^
+	Exercise3.java:9: error: <identifier> expected
+			System.out.println(indexOfMax(intArray));
+			                                       ^
+	Exercise3.java:12: error: class, interface, or enum expected
+		public static int indexOfMax(int[] nums) {
+		              ^
+	Exercise3.java:14: error: class, interface, or enum expected
+			int index = 0;
+			^
+	Exercise3.java:15: error: class, interface, or enum expected
+			for(int i =0; i < nums.length; i++){
+			^
+	Exercise3.java:15: error: class, interface, or enum expected
+			for(int i =0; i < nums.length; i++){
+			              ^
+	Exercise3.java:15: error: class, interface, or enum expected
+			for(int i =0; i < nums.length; i++){
+			                               ^
+	Exercise3.java:18: error: class, interface, or enum expected
+					index = i;
+					^
+	Exercise3.java:19: error: class, interface, or enum expected
+				} 
+				^
+	Exercise3.java:21: error: class, interface, or enum expected
+		} 
+		^
+	71 errors
 	
-	
-<--
-	[OUTPUT OK]
-
 [COMPILING] Exercise4.java
 	[SUCCESSFUL COMPILE] Exercise4.java
 [TESTING WITH] TestCh7Ex4
@@ -212,10 +404,10 @@ Ch6Ex5.java:57: error: cannot find symbol
 	[OUTPUT OK]
 
 [SUMMARY] 
-	['Exercise3: PASSED - EXCELLENT!'
+	['Exercise3: COMPILE ERROR (- 0.30)'
 	 'Exercise4: PASSED - EXCELLENT!']
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
-<b>          [SCORE] <font color="green">1.00</font></b>
+<b>          [SCORE] 0.70</b>
 
 </pre></body></html>
